--- a/_assets/css/_media-queries.sass
+++ b/_assets/css/_media-queries.sass
@@ -406,7 +406,7 @@
       margin-right: 0
       width: 100%
   .subscribe-wrapper
-    padding-top: 6em
+    padding-top: 3em
   .sidebar
     left: 0
   #heading
@@ -558,8 +558,7 @@
     ul
       display: table!important
   .subscribe-wrapper
-    padding-top: 8em
-    height: 40em
+    height: 35em
   input#mc-embedded-subscribe
     vertical-align: middle
   h5
