--- a/_assets/css/main.sass
+++ b/_assets/css/main.sass
@@ -816,6 +816,7 @@ input
         width: 100%
         box-shadow: none
         z-index: -1
+        box-shadow: 0 0 0.5em rgba(0,0,0,0.25)
 
 
 
